
**Improvements:**
* Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
* Centre the background extraction grid vertically instead of starting at the image edge and having a gap (#1741)
* Right-click scripts directly from the script menu to open them in the editor

siril 1.4.0-beta3
07/11/25

**Fixes:**
* Fixed crash when opening 8-bit XISF file (#1638)
* Fixed `match stars in selection` option for global registration (#1644)
* Fixed an issue where image processing dialogs could fail to unblock python scripts when closed.
* Fixed an issue where the python pix2radec and radec2pix commands failed with coords outside the image (!887)
* Fixed an issue that meant the pyscript command was not waiting for the python interpreter to exit (#1660)
* Fixed an issue with some commands e.g. denoise that meant they would always indicate failure in a script (#1661)
* Fixed Crash in pixelmath command with 16-bit images (#1672)
* Fixed incorrect handling of sirilpy.connection.SirilInterface.log() strings (#1662)
* Fixed incorrect channel handling in get_selection_stats() when no shape is provided (#1673)
* FIxed incorrect thread handling after spawning a python script (thread pointer not set to NULL) (#1654)
* Fixed idle handling to eliminate a hang where a thread was stuck waiting for itself to exit  during stacking (#1665)
* Fixed potential thread safety issues setting environment variables
* Fixed issues with updating the script repository - no longer cloned with depth=1
* Fixed handling of star cluster names containing * characters
* Fixed an issue with git repositories where they could be unable to update after changes to the remote (!900)
* Fixed an inconsistency between GList / GSList that caused crashes relating to the scripts menu for some users (!899)
* Fixed an issue with linear ICC profile generation where colorants were not correctly adapted to D50 (#1683)