@@ -20,6 +20,7 @@ xx/xx/xx
 * Compiled .pyc scripts are now only shown in the scripts menu if their magic number matches the available intepreter
 * Centre the background extraction grid vertically instead of starting at the image edge and having a gap (#1741)
 * Right-click scripts directly from the script menu to open them in the editor
+* Allow image preview to be displayed in color if needed for FITS files
 
 siril 1.4.0-beta3
 07/11/25
